--- a/custom-tags: index.hbs
+++ b/custom-tags: index.hbs
@@ -8,6 +8,9 @@
     }
 </style>
 
+{{> "img-navbar"}}
+<div class="content-wrapper">
+
 <main id="site-main" class="site-main outer tag-template">
 <div class="inner posts">
     <div class="post-feed">
@@ -42,4 +45,6 @@
 
 </div>
 </main>
+
+</div>
 
