--- a/custom-media: news.hbs
+++ b/custom-media: news.hbs
@@ -17,6 +17,9 @@ into the {body} tag of the default.hbs template --}}
     }
 </style>
 
+{{> "img-navbar"}}
+<div class="content-wrapper">
+
 {{#post}}
 {{!-- Everything inside the #post block pulls data from the post --}}
 
@@ -36,3 +39,5 @@ into the {body} tag of the default.hbs template --}}
 </main>
 
 {{/post}}
+
+</div>
