--- a/custom-post: hide excerpt.hbs
+++ b/custom-post: hide excerpt.hbs
@@ -3,6 +3,8 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} tag of the default.hbs template --}}
 
+{{> "img-navbar"}}
+<div class="content-wrapper">
 
 {{#post}}
 {{!-- Everything inside the #post block pulls data from the post --}}
@@ -120,3 +122,5 @@ into the {body} tag of the default.hbs template --}}
 {{/if}}
 
 {{/post}}
+
+</div>
