--- a/page.hbs
+++ b/page.hbs
@@ -3,6 +3,8 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} tag of the default.hbs template --}}
 
+{{> "img-navbar"}}
+<div class="content-wrapper">
 
 {{#post}}
 {{!-- Everything inside the #post block pulls data from the page --}}
@@ -44,3 +46,5 @@ into the {body} tag of the default.hbs template --}}
 </main>
 
 {{/post}}
+
+</div>
