--- a/tag.hbs
+++ b/tag.hbs
@@ -1,6 +1,9 @@
 {{!< default}}
 {{!-- The tag above means - insert everything in this file into the {body} of the default.hbs template --}}
 
+{{> "img-navbar"}}
+<div class="content-wrapper">
+
 <main id="site-main" class="site-main outer">
 <div class="inner posts">
     <div class="post-feed">
@@ -52,3 +55,5 @@
     
 </div>
 </main>
+
+</div>
