--- a/partials/index/our-resources.hbs
+++ b/partials/index/our-resources.hbs
@@ -41,10 +41,6 @@
 <h1 class="text-center">Our resources</h1>
 <p class="text-center" style="font-size: 1.2rem"><b>Explore our resources</b></p>
 <div class="resource-box">
-    <a class="resource-item" href="/about-our-mission">
-        <img class="resource-icon" src="{{asset 'image/logo/Icon CFGB color-0.png'}}" />
-        <h2 class="resource-title">About</h2>
-    </a>
     <a class="resource-item" href="/maps">
         <img class="resource-icon" src="{{asset 'image/logo/Icon CFGB color-1.png'}}" />
         <h2 class="resource-title">Maps</h2>
@@ -56,6 +52,10 @@
     <a class="resource-item" href="/media">
         <img class="resource-icon" src="{{asset 'image/logo/Icon CFGB color-3.png'}}" />
         <h2 class="resource-title">Media</h2>
+    </a>
+    <a class="resource-item" href="/education">
+        <img class="resource-icon" src="{{asset 'image/logo/Icon CFGB color-0.png'}}" />
+        <h2 class="resource-title">Education</h2>
     </a>
 </div>
 </div>
