--- a/index.hbs
+++ b/index.hbs
@@ -8,7 +8,6 @@ into the {body} of the default.hbs template --}}
         {{#if @site.cover_image}}
             {{!-- This is a responsive image, it loads different sizes depending on device
             https://medium.freecodecamp.org/a-guide-to-responsive-images-with-ready-to-use-templates-c400bd65c433 --}}
-            <div class="site-header-cover-filter"></div>
             <img class="site-header-cover"
                 srcset="{{img_url @site.cover_image size="s"}} 300w,
                         {{img_url @site.cover_image size="m"}} 600w,
@@ -20,23 +19,6 @@ into the {body} of the default.hbs template --}}
             />
         {{/if}}
     {{/if}}
-
-    {{!-- {{#match @custom.header_style "!=" "Hidden"}}
-        <div class="site-header-inner inner">
-            {{#match @custom.navigation_layout "Logo in the middle"}}
-                {{#if @site.logo}}
-                    <img class="site-logo" src="{{@site.logo}}" alt="{{@site.title}}">
-                {{else}}
-                    <h1 class="site-title">{{@site.title}}</h1>
-                {{/if}}
-            {{else match @custom.navigation_layout "=" "Graphic"}}
-                <div class="d-flex">
-                    <h1 class="site-title">{{@site.title}}</h1>
-                    <img class="site-logo" src="{{@site.logo}}" alt="{{@site.title}}">
-                </div>
-            {{/match}}
-        </div>
-    {{/match}} --}}
 
     {{#match @custom.header_style "!=" "Hidden"}}
         <div class="site-header-inner inner">
@@ -77,7 +59,7 @@ into the {body} of the default.hbs template --}}
 
     <hr>
 
-    <h1 class="text-center">Read our meida and news</h1>
+    <h1 class="text-center">Read our media and news</h1>
 
      {{#get "posts" filter="featured:true,featured:false" limit="5"}}
         {{> "carousel-slider"}}
